Version 2.2.4 - NO NAME
----------------------------------
Core - General
  - Improvements to the Hook class.
  - Minor fix to usertagoperations
  - Changes to the hierarchy selector to disallow circular references.
  - Fix problems with additional editors causing page aliases to be regenerated.
  - Minor fixes to admin log browser.

Installation Assistant v1.3.4
  - Fixes endless recursion issue with setting a tmpdir.

FilePicker v1.0.2
  - Now allow specifying a 'useprefix' boolean parameter to the action url which will use the current top directory
    as a prefix on all returned strings.
  - Slight modification to the profile class.
  - Now sends the FileManager::OnFileUploaded hook the same way as FileManager does

FileManager v1.6.5
  - Change upload action to call FileManager::OnFileUploaded hook before creating the thumbnail to allow a hook to rename the uploaded file.
  - Now enable creation of thumbnails on install.

MicroTiny v2.2.2
  - Minor fix for the filepicker if using a default filepicker profile that specifies a top directory.
  - Re-adds the table plugin (went missing when we upgraded tinymce).

ModuleManager v2.1.3
  - Adds audit line displaying status if cannot connect to ModuleRepository.

Version 2.2.3.1 - Happy Adventure
----------------------------------
Core - General
  - Fix an issue when parsing multiple content blocks.

Version 2.2.3 - Happy Adventure
----------------------------------
Core - General
  - Fixed a redirect loop problem on mixed HTTP/HTTPS sites when the secure flag was set on some pages.
  - Fixed a problem with prefilters and postfilters not working if placed in /assets/plugins.
  - Now use our own derivative of Smarty Internal Template so that we can send hooks, etc.
  - Improved error message if there was an error parsing the template (or a duplicate content block).
  - Fixes content blocks, image blocks, module blocks containing whitespace in the name.
  - Minor fix to {cms_filepicker} plugin.